# scnsl_op_ua_sim

./: .gitignore  CMakeLists.txt  README.md
include/: scnsl_opc-ua.hpp
include/scnsl_opc-ua/: General_type_t.hpp  Node.hpp  Node_type.hpp  Opc-ua_payload.hpp  Opc_ua_payload.hpp  Opc_ua_utils.hpp  opc_ua_utils.hpp
include/scnsl_opc-ua/Client-Server/: Client_Sub_Task_t.hpp  Client_Task_if.hpp  Client_Task_t.hpp  General_type_t.hpp  Node_type.hpp  Node_type_t.hpp  Server_Task_if.hpp
scripts/: FindEdalabBase.cmake  FindEdalabTargets.cmake
src/: General_type_t.cpp  Node.cpp  Node_Type.cpp  Node_Type_t.cpp  Opc_ua_utils.cpp  Server_Task_t.cpp
src/Client-Server/: CMakeLists.txt  Client_Task_if.cpp  Server_Task_if.cpp
tests/: CMakeLists.deps.txt  CMakeLists.txt
tests/C-S_test_01/: CMakeLists.txt
tests/C-S_test_01/include/: ClientTaskImpl.hpp  ServerTaskImpl.hpp
tests/C-S_test_01/scripts/: FindSystemC.cmake
tests/C-S_test_01/src/: ClientTaskImpl.cpp  ServerTaskImlp.cpp  ServerTaskImpl.cpp  main.cpp
